--- a/server/webapp/WEB-INF/rails.new/app/assets/new_stylesheets/single_page_apps/elastic_profiles.scss
+++ b/server/webapp/WEB-INF/rails.new/app/assets/new_stylesheets/single_page_apps/elastic_profiles.scss
@@ -58,7 +58,6 @@ $elastic-profile-icon-hover-color: #000;
 }
 
 .elastic-profile-header {
-  padding: 10px;
 }
 
 .edit-profile {
@@ -141,7 +140,6 @@ $elastic-profile-icon-hover-color: #000;
 }
 
 .plugin-config-read-only {
-  box-sizing: border-box;
   padding:    10px 10px 10px 60px;
   .key-value-pair {
     dt {
